default.css
html, body {
	margin:0px;
	padding:0px;
	font-family:"Lucida Grande","Helvetica","Trebuchet MS",sans-serif;
}

#page {
	max-height: 100%;
}

h2 {
	font-family:"Helvetica","Trebuchet MS",sans-serif;
	font-size:100%;
	color:#666666;
	margin:5px;
	padding:5px;
	background: #eeeeee;
	border: 1px solid #cccccc;
	text-align:center;
	text-transform: uppercase;
	letter-spacing:4px;
}

h2.compact {
	letter-spacing:2px;
}

#links {
	margin:17px 0px 0px 0px;
}

form {
	padding:0px;
	margin:0px;
}

#statusformdiv {
	padding:15px 14px 14px 14px;
	background: #cfe2ff;
	border-bottom: 1px solid #cccccc;
}

p {
	font-family: "Georgia", serif;
	margin-left:10px;
	margin-right:10px;
}

#header {
	background:#7aa5d9;
	height:50px;
	width:100%;
	padding:0px;
	margin:0px;
}

#links {
	float:right;
	font-family:"Lucida Grande","Helvetica","Trebuchet MS",sans-serif;
	font-size:80%;
}

#links ul {
	margin: 0px;
	padding: 0px;
	white-space: nowrap;
}

#links li {
	list-style-type: none;
	padding:0px;
	padding-right:20px;
	display: inline;
}

#links a {
	color:black;
	text-decoration:none;
}

#links a.hover {
	text-decoration:underline;
}

input[name="status"] {
	width:70%;
}

div#mainarea {
    overflow-x: auto;
    overflow-y: auto;
    width: 100%;
}

div.column {
	height: 100%;
    overflow-y: auto;
}

.tweet {
	margin:5px;
	padding:5px;
	background: #eeeeee;
	border: 1px solid #cccccc;
}

.convotweet {
	margin:5px 5px 5px 25px;
	padding:5px;
	background: #f7f7f7;
	border: 1px solid #d7d7d7;
}

.operations {
	float:right;
	font-size:80%;
	font-family:"Lucida Grande","Helvetica","Trebuchet MS",sans-serif;
	color:#888888;
}

.operations a {
	color:#888888;
	text-decoration:none;
}

.operations a.hover {
	text-decoration:underline;
}

.metatext {
	font-size:80%;
	font-family:"Lucida Grande","Helvetica","Trebuchet MS",sans-serif;
	color:#888888;
	width:100%;
}

table {
	margin:0px;
}

table .bigtable {
	margin:5px;
}

table .metatable {
	width:100%;
	padding:0px;
	border-bottom: 1px solid #cccccc;
	margin-bottom:3px;
}

tr {
	margin: 0px;
	padding: 0px;
}

td {
	vertical-align: top;
	margin: 0px;
	padding: 0px;
}

td .tweettextcell {
	padding-left: 5px;
}

.name a{
	color:#444444;
	text-decoration:none;
}

.tweettext {
	font-family: "Georgia", serif;
}

.tweettext a {
	color:#7aa5d9;
	text-decoration:none;
}

.tweettext a.hover {
	text-decoration:underline;
}

.clear {
	clear:both;
}

div.columnnav {
    margin:5px;
	padding:10px;
	background: #eeeeee;
	border: 1px solid #cccccc;
}

div.columnnav a {
    position: relative;
    top: 3px;
}

div.backtotop {
	float:left;
}

div.colswitcherform {
	text-align:center;
	width:100%;
}

#nav {
	float:right;
}

#nav ul {
	margin: 0px;
	padding: 0px;
	white-space: nowrap;
}

#nav li {
	list-style-type: none;
	padding:0px;
	display: inline;
}

#nav a {
	color:#7aa5d9;
	text-decoration:none;
}

#nav a.hover {
	text-decoration:underline;
}

img {
	border:0px;
}

#addcolumndiv {
	float:right;
	padding:15px 14px 14px 14px;
}

#addcolumndiv ul {
	margin: 0px;
	padding: 0px;
	white-space: nowrap;
}

#addcolumndiv li {
	list-style-type: none;
	padding:0px;
	padding-right:20px;
	display: inline;
}

#addcolumndiv li input {
    position:relative;
    top:-7px;
	margin:0px;
	padding:0px;
	width:20px;
}

